--- a/rb1_ros2_description/config/rb1_controller.yaml
+++ b/rb1_ros2_description/config/rb1_controller.yaml
@@ -10,8 +10,8 @@ controller_manager:
 
 diffbot_base_controller:
   ros__parameters:
-    left_wheel_names: ["left_wheel_joint"]
-    right_wheel_names: ["right_wheel_joint"]
+    left_wheel_names: ["robot_left_wheel_joint"]
+    right_wheel_names: ["robot_right_wheel_joint"]
 
     wheel_separation: 0.10
     #wheels_per_side: 1  # actually 2, but both are controlled by 1 signal
@@ -23,7 +23,7 @@ diffbot_base_controller:
 
     publish_rate: 50.0
     odom_frame_id: odom
-    base_frame_id: base_link
+    base_frame_id: robot_base_link
     pose_covariance_diagonal : [0.001, 0.001, 0.001, 0.001, 0.001, 0.01]
     twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.01]
 
